--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-uuid-v4",
+  "name": "@allthings/uuid",
   "version": "1.0.0",
   "title": "UUID v4 for NodeJS",
   "description": "A simple UUID v4 generator for NodeJS.",
